# simple_apriltag

./: .gitmodules  CMakeLists.txt  README.md  package.xml
example/: example_detect.cpp  example_detect_gst.cpp
include/: simple_tag.h
src/: service_client.cpp  service_server.cpp  service_server_gst.cpp  simple_tag.cpp
srv/: DetectApriltag.srv
